--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
 .context-menu {
   position: absolute;
   z-index: 1000000000;
+  padding: inherit;
+  box-shadow: 0,0,0,15px,rgba(255, 0, 0, 0.5);
+  background: 23123;
+}
+.cf-menu {
+  position: absolute;
+  z-index: 1000000000;
+  padding: inherit;
+  box-shadow: -5px 4px 11px 5px rgba(61, 70, 113, 0.5);
+  /*TODO input option colors */
+  /*0 0 0 15px rgba(255, 0, 0, 0.5);*/
+  /*# 0,0,0,15px,rgba(255, 0, 0, 0.5);*/
+  background: 23123;
 }
 
 .context-menu--active {
