--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-.context-menu {
+/*.context-menu {
   position: absolute;
   z-index: 1000000000;
   padding: inherit;
   box-shadow: 0,0,0,15px,rgba(255, 0, 0, 0.5);
   background: 23123;
-}
+}*/
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+@import"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js";
 .cf-menu {
   position: absolute;
   z-index: 1000000000;
@@ -15,7 +17,69 @@
   /*# 0,0,0,15px,rgba(255, 0, 0, 0.5);*/
   background: 23123;
 }
+/**/
+.cf-menu-bar {
+  width: 100%; /* Full-width */
+  background-color: #555; /* Dark-grey background */
+  overflow: auto; /* Overflow due to float */xzz
+}
 
-.context-menu--active {
-  display: block;
+.cf-menu.selected {
+  background-color: #4CAF50;//green
+}
+/*.cf-menu:hover {
+  background-color: #000;;//black
+}*/
+.cf-menu a:hover {
+  background-color: #000;//black
+}
+.right-click{
+  background-color: inherit;
+}
+.left-click{
+  background-color: #4CAF50;
+}
+.bold-class{
+  font-weight: bold;
+  margin:0;
+  padding:0;
+}
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
 }
