--- a/style.css
+++ b/style.css
@@ -1,111 +1,30 @@
-/*.context-menu {
-  position: absolute;
-  z-index: 1000000000;
-  padding: inherit;
-  box-shadow: 0,0,0,15px,rgba(255, 0, 0, 0.5);
-  background: 23123;
-}*/
+
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
 @import"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js";
-@import "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css";
+/*@import "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css";*/
 .cf-menu {
   position: absolute;
   z-index: 1000000000;
   padding: inherit;
   box-shadow: -5px 4px 11px 5px rgba(61, 70, 113, 0.5);
-  /*TODO input option colors */
-  /*0 0 0 15px rgba(255, 0, 0, 0.5);*/
-  /*# 0,0,0,15px,rgba(255, 0, 0, 0.5);*/
   background: 23123;
 }
 /**/
 .cf-menu-bar {
-  width: 100%; /* Full-width */
-  background-color: #555; /* Dark-grey background */
+  width: 100%;
   overflow: auto; /* Overflow due to float */xzz
 }
 
-.cf-menu.selected {
-  background-color: #4CAF50;//green
-}
-/*.cf-menu:hover {
-  background-color: #000;;//black
-}*/
-.cf-menu a:hover {
-  background-color: #000;//black
-}
-.right-click{
-  background-color: inherit;
-}
-.left-click{
-  font-weight: bold;;
-}
-.cf-selection.bold-class{
-  font-weight: bold;
-  margin:0;
-  padding:0;
-}
 .cf-bold{font-weight: bold;}
-.cf-code{font-weight: bold;}
+.cf-code{ text-transform: capitalize; word-spacing: -5px;font-family: Consolas,"courier new";}
 .cf-italic{font-style: italic;}
-.cf-highlight{  background-color: #4CAF50;}
-button.btn.btn-info{
-  color:red;
+.cf-highlight{  background-color: yellow; opacity: 50}
+button.btn.btn-info[active = false]{
+  /*border-color: grey;
+  color:grey;*/
 }
 
-button.btn.btn-info:active{
-  color:brown;
-}
 button.btn.btn-info[active = true]{
-
-   /*.btn-group-vertical>.btn.active, .btn-group-vertical>.btn:active, .btn-group-vertical>.btn:focus, .btn-group-vertical>.btn:hover, .btn-group>.btn.active, .btn-group>.btn:active, .btn-group>.btn:focus, .btn-group>.btn:hover*/
-  color:yellow;
-  border-color:yellow;
-
-
-
-}
-.bold-class{
-  font-weight: bold;
-  margin:0;
-  padding:0;
-}
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+  color:black;
+  border-color:black;
 }
