working using execCommand function insted of messy DOM

--- a/style.css
+++ b/style.css
@@ -25,6 +25,6 @@ button.btn.btn-info[active = false]{
 }
 
 button.btn.btn-info[active = true]{
-  color:black;
-  border-color:black;
+  /*color:black;
+  border-color:black;*/
 }
